--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -14,108 +14,27 @@
       "Loading required package: dplyr\n",
       "\n",
       "\n",
-      "Attaching package: ‘dplyr’\n",
+      "Attaching package: 'dplyr'\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:stats’:\n",
+      "The following objects are masked from 'package:stats':\n",
       "\n",
       "    filter, lag\n",
       "\n",
       "\n",
-      "The following objects are masked from ‘package:base’:\n",
+      "The following objects are masked from 'package:base':\n",
       "\n",
       "    intersect, setdiff, setequal, union\n",
       "\n",
       "\n",
       "Loading required package: DT\n",
       "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘DT’”\n",
-      "Installing package into ‘/Users/robsontrajano/Library/R/x86_64/4.1/library’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "also installing the dependencies ‘later’, ‘htmlwidgets’, ‘crosstalk’, ‘jquerylib’, ‘promises’\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/83/_gttb8hn67dfsswspxfpc23w0000gn/T//RtmpncYPyt/downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "Loading required package: ggrepel\n",
       "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘ggrepel’”\n",
-      "Installing package into ‘/Users/robsontrajano/Library/R/x86_64/4.1/library’\n",
-      "(as ‘lib’ is unspecified)\n",
+      "Loading required package: ggplot2\n",
       "\n",
-      "also installing the dependencies ‘colorspace’, ‘gtable’, ‘isoband’, ‘farver’, ‘labeling’, ‘munsell’, ‘RColorBrewer’, ‘viridisLite’, ‘ggplot2’, ‘scales’\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/83/_gttb8hn67dfsswspxfpc23w0000gn/T//RtmpncYPyt/downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "Loading required package: leaflet\n",
-      "\n",
-      "Warning message in library(package, lib.loc = lib.loc, character.only = TRUE, logical.return = TRUE, :\n",
-      "“there is no package called ‘leaflet’”\n",
-      "Installing package into ‘/Users/robsontrajano/Library/R/x86_64/4.1/library’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n",
-      "also installing the dependencies ‘terra’, ‘gridExtra’, ‘markdown’, ‘png’, ‘raster’, ‘sp’, ‘viridis’, ‘leaflet.providers’\n",
-      "\n",
-      "\n",
-      "Warning message in download.file(url, destfile, method, mode = \"wb\", ...):\n",
-      "“downloaded length 8224768 != reported length 96919656”\n",
-      "Warning message in download.file(url, destfile, method, mode = \"wb\", ...):\n",
-      "“URL 'https://cran.r-project.org/bin/macosx/contrib/4.1/terra_1.4-22.tgz': Timeout of 60 seconds was reached”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in download.file(url, destfile, method, mode = \"wb\", ...) : \n",
-      "  download from 'https://cran.r-project.org/bin/macosx/contrib/4.1/terra_1.4-22.tgz' failed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in download.packages(pkgs, destdir = tmpd, available = available, :\n",
-      "“download of package ‘terra’ failed”\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/83/_gttb8hn67dfsswspxfpc23w0000gn/T//RtmpncYPyt/downloaded_packages\n"
+      "\n"
      ]
     }
    ],
@@ -129,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,14 +66,14 @@
      "text": [
       "\u001b[1mRows: \u001b[22m\u001b[34m15\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m19\u001b[39m\n",
       "\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m--------------------------------------------------------\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \",\"\n",
       "\u001b[31mchr\u001b[39m (10): Region, PopnAllAges, IncidentRate, PopnAged12Plus, RateCharged12Pl...\n",
       "\u001b[32mdbl\u001b[39m  (1): _id\n",
       "\n",
       "\n",
-      "\u001b[36mℹ\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set \u001b[30m\u001b[47m\u001b[30m\u001b[47m`show_col_types = FALSE`\u001b[47m\u001b[30m\u001b[49m\u001b[39m to quiet this message.\n",
+      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m to retrieve the full column specification for this data.\n",
+      "\u001b[36mi\u001b[39m Specify the column types or set \u001b[30m\u001b[47m\u001b[30m\u001b[47m`show_col_types = FALSE`\u001b[47m\u001b[30m\u001b[49m\u001b[39m to quiet this message.\n",
       "\n"
      ]
     }
@@ -165,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -251,14 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[90m# A tibble: 6 × 19\u001b[39m\n",
+      "\u001b[90m# A tibble: 6 x 19\u001b[39m\n",
       "  `_id` Region  NumIncidents PopnAllAges IncidentRate NumCleared ClearedByCharge\n",
       "  \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m       \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m           \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
       "\u001b[90m1\u001b[39m     1 Central       \u001b[4m1\u001b[24m\u001b[4m4\u001b[24m\u001b[4m2\u001b[24m375 4,451,480   3,198.37          \u001b[4m7\u001b[24m\u001b[4m1\u001b[24m533           \u001b[4m5\u001b[24m\u001b[4m2\u001b[24m189\n",
@@ -267,7 +186,7 @@
       "\u001b[90m4\u001b[39m     4 Toronto       \u001b[4m1\u001b[24m\u001b[4m0\u001b[24m\u001b[4m7\u001b[24m747 2,826,498   3,812.03          \u001b[4m4\u001b[24m\u001b[4m5\u001b[24m935           \u001b[4m3\u001b[24m\u001b[4m4\u001b[24m784\n",
       "\u001b[90m5\u001b[39m     5 West          \u001b[4m1\u001b[24m\u001b[4m3\u001b[24m\u001b[4m5\u001b[24m108 2,872,057   4,704.22          \u001b[4m5\u001b[24m\u001b[4m9\u001b[24m790           \u001b[4m4\u001b[24m\u001b[4m3\u001b[24m012\n",
       "\u001b[90m6\u001b[39m     6 Other           \u001b[4m2\u001b[24m625 .           .                  \u001b[4m1\u001b[24m305             770\n",
-      "\u001b[90m# … with 12 more variables: ClearedOtherwise <dbl>, TotalCharged <dbl>,\u001b[39m\n",
+      "\u001b[90m# ... with 12 more variables: ClearedOtherwise <dbl>, TotalCharged <dbl>,\u001b[39m\n",
       "\u001b[90m#   PopnAged12Plus <chr>, RateCharged12Plus <chr>, NumAdultsCharged <dbl>,\u001b[39m\n",
       "\u001b[90m#   PopnAged18Plus <chr>, RateAdultsCharged18Plus <chr>, NumYouthCharged <dbl>,\u001b[39m\n",
       "\u001b[90m#   PopnAged12to17 <chr>, RateCharged12to17 <chr>, NumYouthNotCharged <dbl>,\u001b[39m\n",
@@ -281,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,14 +310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[90m# A tibble: 15 × 11\u001b[39m\n",
+      "\u001b[90m# A tibble: 15 x 11\u001b[39m\n",
       "   Region  NumIncidents PopnAllAges NumCleared ClearedByCharge TotalCharged\n",
       "   \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m            \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m           \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m        \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m\n",
       "\u001b[90m 1\u001b[39m Central       \u001b[4m1\u001b[24m\u001b[4m4\u001b[24m\u001b[4m2\u001b[24m375 4,451,480        \u001b[4m7\u001b[24m\u001b[4m1\u001b[24m533           \u001b[4m5\u001b[24m\u001b[4m2\u001b[24m189        \u001b[4m5\u001b[24m\u001b[4m0\u001b[24m378\n",
@@ -416,7 +335,7 @@
       "\u001b[90m13\u001b[39m \u001b[31mNA\u001b[39m                \u001b[31mNA\u001b[39m \u001b[31mNA\u001b[39m                  \u001b[31mNA\u001b[39m              \u001b[31mNA\u001b[39m           \u001b[31mNA\u001b[39m\n",
       "\u001b[90m14\u001b[39m \u001b[31mNA\u001b[39m                \u001b[31mNA\u001b[39m \u001b[31mNA\u001b[39m                  \u001b[31mNA\u001b[39m              \u001b[31mNA\u001b[39m           \u001b[31mNA\u001b[39m\n",
       "\u001b[90m15\u001b[39m \u001b[31mNA\u001b[39m                \u001b[31mNA\u001b[39m \u001b[31mNA\u001b[39m                  \u001b[31mNA\u001b[39m              \u001b[31mNA\u001b[39m           \u001b[31mNA\u001b[39m\n",
-      "\u001b[90m# … with 5 more variables: PopnAged12Plus <chr>, RateCharged12Plus <chr>,\u001b[39m\n",
+      "\u001b[90m# ... with 5 more variables: PopnAged12Plus <chr>, RateCharged12Plus <chr>,\u001b[39m\n",
       "\u001b[90m#   NumAdultsCharged <dbl>, PopnAged18Plus <chr>, RateAdultsCharged18Plus <chr>\u001b[39m\n"
      ]
     }
@@ -427,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -701,15 +620,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "ERROR",
-     "evalue": "Error: Must subset rows with a valid subscript vector.\n\u001b[31m✖\u001b[39m Subscript `!is.na(df)` must be a simple vector, not a matrix.\n",
+     "evalue": "Error: Must subset rows with a valid subscript vector.\n\u001b[31mx\u001b[39m Subscript `!is.na(df)` must be a simple vector, not a matrix.\n",
      "output_type": "error",
      "traceback": [
-      "Error: Must subset rows with a valid subscript vector.\n\u001b[31m✖\u001b[39m Subscript `!is.na(df)` must be a simple vector, not a matrix.\nTraceback:\n",
+      "Error: Must subset rows with a valid subscript vector.\n\u001b[31mx\u001b[39m Subscript `!is.na(df)` must be a simple vector, not a matrix.\nTraceback:\n",
       "1. df[!is.na(df), ]",
       "2. `[.tbl_df`(df, !is.na(df), )",
       "3. tbl_subset_row(xo, i = i, i_arg)",
